update routing for Typemaster game

--- a/game.html
+++ b/game.html
@@ -100,7 +100,7 @@
             <a href="/" style="padding:1rem"><b>Home</b></a>
         </div>
         <div>
-            <a href="/game" style="padding:1rem"><b>Typemaster</b></a>
+            <a href="/game.html" style="padding:1rem"><b>Typemaster</b></a>
         </div>
         <div>
             <a href="https://www.linkedin.com/in/pierce-renio-757537179" style="padding:1rem"><b>LinkedIn</b></a>
