--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <a href="/" style="padding:1rem"><b>Home</b></a>
         </div>
         <div>
-            <a href="/game" style="padding:1rem"><b>Typemaster</b></a>
+            <a href="/game.html" style="padding:1rem"><b>Typemaster</b></a>
         </div>
         <div>
             <a href="https://www.linkedin.com/in/pierce-renio-757537179" style="padding:1rem"><b>LinkedIn</b></a>
@@ -220,7 +220,7 @@
             <p class="textPierceS" style="text-align: left; padding-left: 0px; font-size: 29px;">The Pokemon typechart has always been a mess to try and memorize. That is 
                                                                                 why I created Typemaster, a game that helps train type knowledge by giving 
                                                                                 possible in-game situations. Pick the type that is most effective! How high can
-                                                                                your streak go? Test your skills <a class="linkProj" href="/game"><b><u>here</u></b></a>!</p>
+                                                                                your streak go? Test your skills <a class="linkProj" href="/game.html"><b><u>here</u></b></a>!</p>
         </div>
     </div>
     </div>
