--- a/game.html
+++ b/game.html
@@ -228,7 +228,7 @@
 
     <!-- Latest compiled and minified JavaScript -->
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <script defer src="http://localhost:1337/static/js/type.js"></script>
-    <script defer src="http://localhost:1337/static/js/TypeMaster.js"></script>
+    <script defer src="/static/js/type.js"></script>
+    <script defer src="/static/js/TypeMaster.js"></script>
 </body>
 </html>
