fix typos in text on home page

--- a/index.html
+++ b/index.html
@@ -153,12 +153,12 @@
         
         <div>
             <h1 style="text-align: center;">About Me</h1><br>
-            <p class="textPierceS" style="font-size: 20px;"> Being able to see the world best through numbers has always been my forte and it fueled my passion for data science.
+            <p class="textPierceS" style="font-size: 20px;"> Being able to see the world best through numbers has always been my forte and it fuels my passion for data science.
                                     At UC Berkeley, I learned the fundamentals of computer science and at ASU, I was
                                     able to refine my programming skills, learn new languages and discover more statistical and data science methods. With my 
-                                    abilities I have been able to create several projects, both for academic and recreation purposed but always passion based.
-                                    Having an acedemic background to learn data science, statistics, math, and other computer science tools allowed me to 
-                                    gain a diverse toolkit to tackle any problem I have encountered. Some of the languages and tools I know include: </p>
+                                    abilities I have been able to create several projects, both academic and recreation purposed but always passion based.
+                                    Having an academic background to learn data science, statistics, math, and other computer science tools allowed me to 
+                                    obtain a diverse toolkit to tackle any problem I have encountered. Some of the languages and tools I know include: </p>
 
             <div class="d-flex flex-row justify-content-around">
 
@@ -194,7 +194,7 @@
         <div>
             <h3 style="text-align: center;">Predicting YouTube Video Clickbait Potential and Predicting Metadata Statistics</h3><br>
             <p class="textPierceS" style="text-align: left; font-size: 22px">With YouTube being the largest social media platform and 
-                                                            one of the most visited websites in the world, it is only 
+                                                            one of the most visited websites in the world, it is only natural
                                                              that clickbait stays present and ungoverned. This project
                                                             aimed to determine if it is possible to detect clickbait 
                                                             in a video based on primarily the title of the video and 
@@ -230,7 +230,7 @@
             <div>
                 <h2 style="text-align: center;">MLB Linear Regression</h2><br>
                 <p class="textPierceS" style="text-align: left; font-size: 23px">Baseball is the textbook statistics sport. It's no surprise here that it was 
-                                                                the focus at least one stats project. The goal was to find the 2 most influential
+                                                                the focus for at least one stats project. The goal was to find the 2 most influential
                                                                 dependent variables on the independent variable: number of wins. Arguably the most 
                                                                 important variable in the entire game. Using SAS and linear regression techniques,
                                                                 a model was able to be created with the 2 most important variables to determine the 
